fix button motion on mobile

--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ body{
 
       @media (max-width:1199px){
         .button{
-         font-size: 100px;
+         font-size: 60px;
          width: 60%;
-         margin-left: 10%;
+         margin-left: 20%;
         }
       }
 
@@ -101,12 +101,12 @@ body{
                           position: absolute;
                           opacity: 0;
                           top: 0;
-                          right: -20px;
+                          right: -80px;
                           transition: 1.5s;
                          }
       
       .button:hover span {
-                          padding-right: 25px;
+                          padding-right: 80px;
                          }
       
       .button:hover span:after {
